--- a/scss/components/_menu.scss
+++ b/scss/components/_menu.scss
@@ -27,7 +27,7 @@ $cmp-menu-off-canvas: true;
  */
 .menu__list {
   @include list-reset();
-  margin-bottom: 0;
+  margin: 0;
   background: $cs-a;
 }
 
@@ -98,6 +98,7 @@ $cmp-menu-off-canvas: true;
       top: 0;
       bottom: 0;
       left: 0;
+      z-index: 100;
       max-width: 20em;
       width: 70%;
       transform: translate(-100%, 0);
